updated screens and transfer repo to sysdev account

--- a/vcastplay-cms/src/app/pages/screens/screen-list-item/screen-list-item.component.html
+++ b/vcastplay-cms/src/app/pages/screens/screen-list-item/screen-list-item.component.html
@@ -1,41 +1,72 @@
-<div class="p-[1rem] border border-gray-200 rounded-lg">
-    <div class="flex flex-row gap-2 justify-between items-center mb-3">
-        <div class="flex flex-col gap-1">
-            <h6 class="font-semibold">{{ screen.code }}: {{ screen.name }}</h6>
-            <p>{{ screen.type.toUpperCase() }}</p>
-            <p class="text-sm">{{ screen.group }} | {{ screen.subGroup }}</p>
+<p-card>
+    <ng-template #title>
+        <div class="flex gap-2">
+            <div class="flex items-center gap-2 md:gap-4">
+                <div class="flex items-center gap-4 bg-[var(--p-primary-500)] 
+                    text-white rounded-full p-3" [pTooltip]="screen.type.toUpperCase()" tooltipPosition="bottom">
+                    @switch (screen.type) {
+                        @case('desktop') { <i class="pi pi-desktop"></i> }
+                        @case('android') { <i class="pi pi-mobile"></i> }
+                        @default { <i class="pi pi-globe"></i> }
+                    }
+                </div>
+
+                <div class="flex flex-col">
+                    <p class="text-sm md:text-lg font-semibold">{{ screen.name }}</p>
+                    <p class="text-xs md:text-sm line-clamp-1">{{ screen.code }}</p>
+                </div>
+            </div>
+            <div class="ml-auto">
+                <p-tag [value]="screen.status" [severity]="utils.getStatus(screen.status)" [icon]="'pi ' + utils.getIcon(screen.status)" />
+            </div>
         </div>
-        <div class="flex flex-row">
-            <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: screen }"></ng-container>
+    </ng-template>
+    <div class="flex flex-col my-5 gap-5">
+        <div class="flex gap-2 items-center">
+            <p class="font-semibold">Group:</p>
+            <div class="flex gap-2 items-center ml-auto">
+                <p class="text-sm italic">{{ screen.group ?? '-' }}</p>
+            </div>
+        </div>
+        <div class="flex gap-2 items-center">
+            <p class="font-semibold">Sub-Group:</p>
+            <div class="flex gap-2 items-center ml-auto">
+                <p class="text-sm italic">{{ screen.subGroup ?? '-' }}</p>
+            </div>
+        </div>
+        <div class="flex gap-2 items-center">
+            <p class="font-semibold">Orientation:</p>
+            <div class="flex gap-2 items-center ml-auto">
+                <p class="text-sm font-semibold">{{ screen.displaySettings.orientation.toUpperCase() || '-' }}</p>
+            </div>
+        </div>
+        <div class="flex gap-2 items-center">
+            <p class="font-semibold">Resolution:</p>
+            <div class="flex gap-2 items-center ml-auto">
+                <p class="text-sm font-semibold">{{ screen.displaySettings.resolution || '-' }}</p>
+            </div>
+        </div>
+        <div class="flex gap-2 items-center">
+            <p class="font-semibold">Last Update:</p>
+            <div class="flex gap-2 items-center ml-auto">
+                <i class="pi pi-clock" [style]="{ 'font-size': '0.75rem'}"></i>
+                <p class="text-sm italic">{{ screen.updatedOn | date: 'mediumDate' }}</p>
+            </div>
+        </div>
+        <div class="flex gap-2 items-center">
+            <p class="font-semibold">Tags:</p>
+            <div class="flex gap-2 items-center ml-auto">
+                @for (item of screen.tags; track $index) {
+                    <p-chip [label]="item" />
+                } @empty {
+                    <p class="text-sm italic">-</p>
+                }
+            </div>
         </div>
     </div>
-    <p-accordion [value]="0">
-        <p-accordion-panel value="0">
-            <p-accordion-header>Display Settings</p-accordion-header>
-            <p-accordion-content>
-                <div class="flex flex-col gap-1">
-                    <p>Orientation: {{ screen.displaySettings.orientation }}</p>
-                    <p>Resolution: {{ screen.displaySettings.resolution }}</p>
-                </div>
-            </p-accordion-content>
-        </p-accordion-panel>
-        <p-accordion-panel value="1">
-            <p-accordion-header>Geographical Location</p-accordion-header>
-            <p-accordion-content>
-                <div class="flex flex-col gap-1">
-                    <p>Location: {{ screen.geographicalLocation.location }}</p>
-                    <p>Landmarks: {{ screen.geographicalLocation.landmark }}</p>
-                </div>
-            </p-accordion-content>
-        </p-accordion-panel>
-        <p-accordion-panel value="2">
-            <p-accordion-header>Operational Schedule</p-accordion-header>
-            <p-accordion-content>
-                <div class="flex flex-col gap-1">
-                    <p>Operation: {{ screen.schedule.operation }}</p>
-                    <p>Hours: {{ (screen.schedule.hours | date: 'shortTime') ?? 'N/A' }}</p>
-                </div>
-            </p-accordion-content>
-        </p-accordion-panel>
-    </p-accordion>
-</div>
+    <ng-template #footer>
+        <div class="flex justify-end gap-2">
+            <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: screen }"></ng-container>
+        </div>
+    </ng-template>
+</p-card>
