--- a/vcastplay-cms/src/app/components/dashboard/screen-map/screen-map.component.html
+++ b/vcastplay-cms/src/app/components/dashboard/screen-map/screen-map.component.html
@@ -30,10 +30,10 @@
                         <div class="font-semibold">Resolution</div>
                         <p class="text-sm italic">{{ selectedScreen()?.displaySettings?.resolution }}</p>
                     </div>
-                    <div class="flex flex-col gap-1">
+                    <!-- <div class="flex flex-col gap-1">
                         <div class="font-semibold">Layout</div>
                         <p class="text-sm italic">{{ selectedScreen()?.layout }}</p>
-                    </div>
+                    </div> -->
                     <div class="flex flex-col gap-1">
                         <div class="font-semibold">More Details</div>
                         <p class="text-sm italic">...</p>
@@ -79,10 +79,10 @@
                         <div class="font-semibold">Resolution</div>
                         <p class="text-sm italic">{{ selectedScreen()?.displaySettings?.resolution }}</p>
                     </div>
-                    <div class="flex flex-col gap-1">
+                    <!-- <div class="flex flex-col gap-1">
                         <div class="font-semibold">Layout</div>
                         <p class="text-sm italic">{{ selectedScreen()?.layout }}</p>
-                    </div>
+                    </div> -->
                     <div class="flex flex-col gap-1">
                         <div class="font-semibold">More Details</div>
                         <p class="text-sm italic">...</p>
