--- a/vcastplay-cms/src/app/pages/playlist/playlist-list-item/playlist-list-item.component.html
+++ b/vcastplay-cms/src/app/pages/playlist/playlist-list-item/playlist-list-item.component.html
@@ -1,13 +1,15 @@
 <p-card>
     <ng-template #title>
-        <div class="flex gap-2">
-            <div class="flex gap-2 items-center">
-                <p class="font-semibold">{{ playlist.name }}</p>
+        <div class="flex gap-2 items-center">
+            <div class="flex flex-col">
+                <p class="text-sm md:text-lg font-semibold">{{ playlist.name }}</p>
+                <p class="text-xs md:text-sm font-normal line-clamp-1">{{ playlist.description }}</p>
+            </div>
+            <div class="ml-auto">
                 <p-tag [value]="playlist.status" [severity]="utils.getStatus(playlist.status)" [icon]="'pi ' + utils.getIcon(playlist.status)" />
             </div>
         </div>
     </ng-template>
-    <ng-template #subtitle><p>{{ playlist.description }}</p></ng-template>
     <div class="flex flex-col my-5 gap-5">
         <div class="flex gap-2 items-center">
             <p class="font-semibold">Last Update:</p>
