--- a/vcastplay-cms/src/app/pages/schedules/schedule-list-item/schedule-list-item.component.html
+++ b/vcastplay-cms/src/app/pages/schedules/schedule-list-item/schedule-list-item.component.html
@@ -1,13 +1,15 @@
 <p-card class="text-sm md:text-base">
     <ng-template #title>
-        <div class="flex gap-2">
-            <div class="flex gap-2 items-center">
-                <p class="font-semibold line-clamp-1">{{ schedule.name }}</p>
+        <div class="flex gap-2 items-center">
+            <div class="flex flex-col">                
+                <p class="text-sm md:text-lg font-semibold">{{ schedule.name }}</p>
+                <p class="text-xs md:text-sm line-clamp-1 font-normal">{{ schedule.description }}</p>
+            </div>
+            <div class="ml-auto">
                 <p-tag [value]="schedule.status" [severity]="utils.getStatus(schedule.status)" [icon]="'pi ' + utils.getIcon(schedule.status)" />
             </div>
         </div>
     </ng-template>
-    <ng-template #subtitle><p class="line-clamp-1">{{ schedule.description }}</p></ng-template>
     <div class="flex flex-col my-5 gap-5">
         <div class="flex gap-2 items-center">
             <p class="font-semibold">Last Update:</p>
