--- a/vcastplay-cms/src/app/pages/screens/screen-details/screen-details.component.html
+++ b/vcastplay-cms/src/app/pages/screens/screen-details/screen-details.component.html
@@ -6,7 +6,7 @@
             <p class="text-xl font-semibold">Screen Details</p>
         </div>
     </ng-template>
-    <div class="flex flex-col md:flex-row gap-6 mt-4" [formGroup]="screenForm">
+    <!-- <div class="flex flex-col md:flex-row gap-6 mt-4" [formGroup]="screenForm">
         <div class="flex flex-col gap-4 w-full">
             <p-divider [align]="'left'" type="solid"><b class="text-sm">Information</b></p-divider>
             <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
@@ -95,13 +95,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-span-1 md:col-span-12">
-                    <p-floatlabel variant="in">
-                        <input id="caltonDatxSerialNo" pInputText formControlName="caltonDatxSerialNo" 
-                            [ngClass]="{ 'ng-invalid ng-dirty': formControl('caltonDatxSerialNo').invalid && formControl('caltonDatxSerialNo').touched }" fluid />
-                        <label for="caltonDatxSerialNo">Calton Serial No.</label>
-                    </p-floatlabel>
-                </div>
             </div>
         </div>
         <div class="flex flex-col gap-4 w-full">
@@ -133,13 +126,13 @@
                 </p-accordion-panel>
             </p-accordion>
         </div>
-    </div>
-    <ng-template #footer>
+    </div> -->
+    <!-- <ng-template #footer>
         <div class="flex justify-start md:justify-end gap-3">
-            <!-- <p-button label="Cancel" severity="secondary" [routerLink]="['/screens/screen-registration']" /> -->
+            <p-button label="Cancel" severity="secondary" />
             <p-button label="Register Screen" (onClick)="onClickSave($event)" />
         </div>
-    </ng-template>
+    </ng-template> -->
 </p-card>
 
 <p-toast />
