--- a/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
+++ b/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
@@ -12,18 +12,17 @@
                     }
                 </div>
                 <div class="hidden md:flex gap-2">
-                    <p-button label="Get Contents" icon="pi pi-images" size="small" severity="info" (onClick)="onClickGetContents()" />
+                    <!-- <p-button label="Get Contents" icon="pi pi-images" size="small" severity="info" (onClick)="onClickGetContents()" /> -->
                     <p-button label="Save Playlist" icon="pi pi-save" size="small" (onClick)="onClickSave($event)" />
                 </div>
                 <div class="flex md:hidden gap-2">
-                    <p-button icon="pi pi-images" size="small" severity="info" (onClick)="onClickGetContents()" />
+                    <!-- <p-button icon="pi pi-images" size="small" severity="info" (onClick)="onClickGetContents()" /> -->
                     <p-button icon="pi pi-save" size="small" (onClick)="onClickSave($event)" />
                 </div>
             </div>
         </ng-template>
         <div class="grid grid-cols-1 md:grid-cols-12 gap-2 h-full mt-2">
-            <div class="col-span-1 flex flex-col gap-2"
-                [ngClass]="{ 'md:col-span-6 xl:col-span-8': !isExpanded(), 'md:col-span-12': isExpanded() }">
+            <div class="col-span-1 md:col-span-6 xl:col-span-8 flex flex-col gap-2">
 
                 <div class="grid grid-flow-row grid-cols-1 md:grid-cols-12 gap-4">
                     <div class="col-span-1 md:col-span-3">
@@ -41,8 +40,6 @@
                                     [ngClass]="{ 'ng-invalid ng-dirty': formControl('description').invalid && formControl('description').touched }" fluid />
                             </p-floatlabel>
                         </div>
-                        <p-button [icon]="!isExpanded() ? 'pi pi-times' : 'pi pi-image'" pTooltip="Contents" tooltipPosition="bottom"
-                            (onClick)="isExpanded.set(!isExpanded())" outlined />
                     </div>
                 </div>
 
@@ -51,7 +48,7 @@
                     [currentContent]="playlistService.currentContent()" />
             </div>
 
-            <div class="col-span-1 md:col-span-6 xl:col-span-4" [ngClass]="{ 'hidden': isExpanded() }">
+            <div class="col-span-1 md:col-span-6 xl:col-span-4">
                 <div class="flex flex-col gap-2 border border-[var(--p-surface-300)] rounded-lg h-80 md:h-full">
                     <div class="p-3 flex items-center gap-2">
                         <p-inputgroup>
